src/renderer/App.scss
/* ... */
textarea.changed {
  border-left-width: 0.5em;
  border-left-color: $pt-intent-primary;
  border-left-style: solid;
  margin-left: -0.2em;
}

.bp6-html-select.changed {
  border-left-width: 0.5em;
  border-left-color: $pt-intent-primary;
  border-left-style: solid;
  margin-left: -0.2em;
}

.dark {
  background-color: $pt-dark-app-background-color !important;

  .bundle {
    background: $dark-gray3 !important;
    color: $pt-dark-code-text-color !important;

    &:hover {
      background-color: $dark-gray4 !important;

      .preview {
        background: transparent !important;
      }
    }

    &.active {
      background-color: $pt-intent-primary !important;
      color: $pt-dark-text-color !important;
    }
  }

  .home {
    background-color: $pt-dark-app-background-color !important;

    .bp6-card {
      box-shadow: none !important;
    }
  }

  .bundles-grid .grid {
    background: linear-gradient(135deg, $dark-gray1 0%, $dark-gray2 100%) !important;
  }

  .tree {
    background: linear-gradient(135deg, $dark-gray1 0%, $dark-gray2 100%) !important;
  }

  .gutter {
    background-color: $dark-gray4;

    &:hover {
      background-color: $pt-dark-divider-white;
    }
  }

  .side-menu {
    border-right-color: $pt-dark-divider-white;
  }

  .search-results-list {
    background: linear-gradient(135deg, $dark-gray1 0%, $dark-gray2 100%) !important;

    .pages .active {
      background-color: $dark-gray4 !important;
    }
  }

  .search-result-entry {
    background-color: $dark-gray3;

    &:hover {
      background-color: $dark-gray4;
    }

    .search-result-preview {
      background-color: $dark-gray1;
    }
  }

  .tasks-page {
    background: linear-gradient(135deg, $dark-gray1 0%, $dark-gray2 100%);
  }
}

.theme-wrapper {
  width: 100%;
  flex-grow: 1;
  display: flex;
  flex-direction: row;
  max-width: 100%;
  overflow: hidden;
}

.file-stats {
  display: flex;
  flex-direction: row;
  padding-top: 0.5em;
  gap: 1em;
}

.bundles-grid {

  display: flex;
  flex-direction: column;
  flex-grow: 1;

  .grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-content: flex-start;
    overflow: auto;
    gap: 1em;
    padding: 1em;
    flex-grow: 1;
    background-color: $pt-app-background-color;

    .row {
      display: flex;
      flex-direction: row;
      gap: 0.5em;
      padding-right: 1em;
    }
  }

  .bundle {
    padding: 0.5em;
    overflow: hidden;
    text-overflow: ellipsis;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    width: 10em;
    height: 12.3em;
    border-color: $pt-divider-black;
    border-width: 1px;
    border-style: solid;
    border-radius: $pt-border-radius;
    background-color: $white;
    cursor: pointer;

    &.active {
      background-color: $pt-intent-primary;
      color: $pt-dark-text-color;

      &:hover {
        background-color: $pt-intent-primary;
        color: $pt-dark-text-color;
      }
    }

    &:hover {
      background-color: $light-gray3;
      color: $pt-text-color;
      user-select: none;

      .preview {
        background: black;

        img {
          opacity: 0.4;
        }

        .overlay-icon {
          opacity: 0.8;
        }

        #properties span {
          background-color: transparent;
        }
      }
    }

    p {
      display: -webkit-box;
      overflow: hidden;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
      text-overflow: ellipsis;
      max-height: 2.3em;
      font-size: 0.8em;
      margin: 0;
    }

    .preview {
      position: relative;
      width: 8em;
      height: 8em;
      border-radius: calc($pt-border-radius * 2);
      overflow: hidden;
      padding: 0;

      .bp6-button-text {
        display: flex;
        justify-content: center;
      }

      .bp6-icon {
        align-self: center;
      }

      &.virtual {
        border-radius: 2em;
      }

      #properties {
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        display: flex;
        flex-direction: row-reverse;
        padding-right: 1em;
        padding-left: 1em;
        padding-bottom: 0.5em;

        span {
          color: $pt-app-background-color;
          background-color: color.adjust($color: $pt-text-color, $alpha: -0.3);
          border-radius: 0.2em;
          padding: 0.2em;
        }
      }

      .overlay-icon {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateY(-50%) translateX(-50%);
        color: $pt-dark-icon-color-hover;
        opacity: 0;

        svg {
          width: 3em;
          height: 3em;
        }
      }

      button {
        pointer-events: none;
      }

      .bp6-button-text {
        width: 100%;
        height: 100%;
      }

      img {
        width: 100%;
        height: 100%;
        object-fit: cover;


      }
    }
  }
}

.new-bundle-layout {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.new-bundle {
  display: flex;
  flex-direction: column;
  padding: 1em;
  width: 100%;
}

.bundle-details-layout {
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow: visible;
}

.bundle-info {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding-left: 1em;
  padding-bottom: 1em;
  overflow: auto;
  flex-grow: 1;

  .breadcrumbs {
    min-height: 2em;
    max-height: 2em;
    flex-grow: 1;
  }

  #preview-bundle-tab-panel {

    height: 100%;
    overflow: hidden;
    padding-top: 1em;

    .preview-bundle {
      overflow: visible;
      padding-right: 1em;

      h1 {
        margin-top: 0;
      }
    }
  }
}

#preview-bundle-parent {
  margin-top: 0;
  display: flex;
  flex-wrap: nowrap;
  gap: 0;
}
/* ... */

